--- a/index.html
+++ b/index.html
@@ -86,20 +86,20 @@
               <h2 class="blog-post-title">Gender Detection & Prediction</h2>
               <p class="blog-post-meta">June 20, 2020 by <a href="#">Alli Kruger & Sowmya Srinivasan</a></p>
               <p>Is there a bias towards a certain gender in movie scripts? </br>The purpose of this project is to see if a machine learning algorithm can predict a character's gender from the words spoken by the character in the movie script.</p>
-              
+              <img src="resources/images/allwordcloud.png" class="img-fluid" alt="Responsive image" >
               <h2>Gender Bias</h2>
               <p>There is a bias in scripts towards male characters. There are almost twice as many male characters than female characters. However, there is not as big of a bias as we originally thought and we adjusted the training dataset so that there were an equal number of lines for female and male characters.</p>
-              <img src="resources/images/charpergender.png" class="img-fluid" alt="Responsive image">
+              <img src="resources/images/charpergender.png" class="img-fluid" alt="Responsive image" style = "max-width: 50%; max-height: 50%;">
               <p>The male characters had 2.3 times more lines than a female character. A female character got to speak 2.3 times less than the male characters. Given that women are a little more half the population movie scripts are not representing reality accurately. </p>
-              <img src="resources/images/linespergender.png" class="img-fluid" alt="Responsive image">
+              <img src="resources/images/linespergender.png" class="img-fluid" alt="Responsive image" style = "max-width: 50%; max-height: 50%;">
               
               <h3>Words spoken by each Gender</h3>
               <p>The words spoken by each gender were not very different. The first round of word clouds contained mostly names and did not show anything of interest. This was improved by including character names in the stopwords that were removed later.</p>
-              <img src="resources/images/allwordcloud.png" class="img-fluid" alt="Responsive image">
+              <img src="resources/images/femalewordcloud.png" class="img-fluid" alt="Female Word Cloud" style = "max-width: 70%; max-height: 70%;">
               <p>The words that female characters say shows …TBD…</p>
-              <img src="resources/images/femalewordcloud.png" class="img-fluid" alt="Female Word Cloud">
-              <p>The words that female characters say shows …TBD…</p>
-              <img src="resources/images/malewordcloud.png" class="img-fluid" alt="Female Word Cloud">
+              <img src="resources/images/malewordcloud.png" class="img-fluid" alt="Female Word Cloud" style = "max-width: 70%; max-height: 70%;">
+              <p>The words that male characters say shows …TBD…</p>
+              <h4>Word Cloud Process</h4>
               <p>The code to create the word clouds is below</p>
               <pre><code>Example code block</code></pre>
               <p>Take a list of words as strings and pass if through wordcloud with your specifications.</p>
