Added new button and prediction output.

--- a/index.html
+++ b/index.html
@@ -62,18 +62,14 @@
             <h1 class="jumbo-text">Movie Character Gender Detection</h1>
             <p class="lead my-3">Predicting the gender of a movie character with machine learning using utterances in scripts.</p>
             <p>
-            
             <div class="input-group mb-3">
-            <div class="input-group-prepend">
-                <span class="input-group-text" id="basic-addon3">write something</span>
+              <input type="text" class="form-control" placeholder="Write Something" aria-label="Recipient's username" aria-describedby="basic-addon2">
+              <div class="input-group-append">
+                <button class="btn" type="button">Predict Gender</button>
+              </div>
             </div>
-            <!-- Need to have an option to fill in lines from the database potentially -->
-            <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
-            </div>
-            <label for="basic-url">Let Us Guess Your Gender</label>
             <p>
-              <!-- <a href="#" class="btn btn-primary my-2">Main call to action</a>
-              <a href="#" class="btn btn-secondary my-2">Secondary action</a> -->
+              <h2 class = "predict_g"> It's a Girl! </h2>
             </p>
           </div>
         </section>
