Updated new pages to allow for prediction with python file.

--- a/data_cleaning.html
+++ b/data_cleaning.html
@@ -13,7 +13,7 @@
   <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-light bg-light">
-            <a class="navbar-brand" href="#">Gender Detector</a>
+            <a class="navbar-brand" href="index.html">Gender Detector</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample03" aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
